--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-VITE_API_URL="https://api.cloud.cbh.kth.se"
-VITE_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
-VITE_DEPLOY_SOCKET_URL="wss://api.cloud.cbh.kth.se/deploy/v1"
+VITE_API_URL="https://visualize.cloud.cbh.kth.se"
