--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: registry.cloud.cbh.kth.se/deploy-3de025ba-ed43-43e0-ab50-03c04b7ef968/visualize
+        tags: ${{ secrets.DOCKER_TAG }}
